catkin_ws/logs/backend/build.make.537.log.stderr
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp: In function ‘int main(int, char**)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:241:51: error: ‘scaleFactor’ was not declared in this scope
    frame.getDepth().convertTo( depthMap, CV_8UC1, scaleFactor );
                                                   ^
make[2]: *** [CMakeFiles/backend.dir/src/main.cpp.o] Error 1
make[1]: *** [CMakeFiles/backend.dir/all] Error 2
make: *** [all] Error 2
